# voxel-engine

./: .gitignore  Cargo.toml  stuff-to-move-to-demo.md
assets/: terrain_gen_options.ron
assets/configs/generation/: cave_gen_options.ron  generation_options.ron  terrain_gen_options.ron
assets/configs/voxels/: dirt.ron  grass.ron  stone.ron
assets/shaders/: lighting.wgsl  simple_vertex.wgsl  voxel.wgsl  voxel_geometry_pass.wgsl
config/: config.yml
demo/: Cargo.toml
demo/assets/configs/generation/: cave_gen_options.ron  generation_options.ron
demo/assets/configs/voxels/: stone.ron
demo/assets/shaders/: voxel.wgsl
demo/config/: config.yml  log.yml
demo/src/: main.rs
demo/src/camera_controller/: component.rs  mod.rs
demo/src/config/: mod.rs
demo/src/generator/: common.rs  mod.rs
engine/: Cargo.toml
engine/imgui-rs/imgui/: Cargo.toml
engine/imgui-rs/imgui-winit-support/: Cargo.toml
engine/imgui-rs/imgui-winit-support/src/: lib.rs
engine/imgui-wgpu/: Cargo.toml
engine/imgui-wgpu/src/: lib.rs
engine/src/: lib.rs
engine/src/application/: mod.rs  runner.rs
engine/src/common/: chunk.rs  face_dir.rs  mod.rs  quad.rs  voxel.rs
engine/src/ecs/: schedules.rs
engine/src/ecs/components/: geometry.rs  mod.rs  render_descriptor.rs
engine/src/ecs/events/: mod.rs  window_events.rs
engine/src/ecs/resources/: screen_quad.rs
engine/src/ecs/systems/: render_system.rs
engine/src/rendering/: depth_texture.rs  index.rs  texture.rs  texture_array.rs  vertex.rs
engine/src/rendering/pipelines/: mod.rs
engine/src/utils/: mod.rs
engine/src/utils/file_system/: write.rs
imgui-rs/imgui-winit-support/: Cargo.toml
imgui-rs/imgui-winit-support/src/: lib.rs
imgui-wgpu/: Cargo.toml
imgui-wgpu/src/: lib.rs
src/: main.rs
src/application/: mod.rs
src/common/: chunk.rs  face_dir.rs  mod.rs  quad.rs  voxel.rs
src/ecs/: mod.rs  schedules.rs
src/ecs/components/: camera_controller.rs  chunk.rs  geometry.rs  mod.rs  render_descriptor.rs  render_surface.rs  window.rs
src/ecs/events/: window_events.rs
src/ecs/resources/: camera.rs  config.rs  gpu_instance.rs  mod.rs  render_context.rs  render_surface.rs  screen_quad.rs  window.rs
src/ecs/systems/: chunk_systems.rs  config_systems.rs  init_camera_system.rs  init_pipeline_server_system.rs  mod.rs  render_system.rs  rerender_request_system.rs  test_system.rs  update_camera_system.rs  window_event_readers.rs
src/rendering/: depth_texture.rs  index.rs  instance.rs  mod.rs  simple_vertex.rs  texture.rs  texture_array.rs  vertex.rs
src/rendering/pipelines/: lighting_pipeline.rs  mod.rs  voxel_pipeline.rs
src/utils/: bevy.rs
src/utils/file_system/: mod.rs  read.rs
src/world/: mod.rs
