[package]
name = "voxel-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Window
winit = { version = "0.30.0", default-features = false, features = [ "rwh_06", "x11" ] }

# Rendering
wgpu = { version = "0.20.0", default-features = false, features = [ "dx12", "wgsl" ] }

# Math
nalgebra = "0.32.5"

# Logging
log = "0.4.21"
log4rs = { version = "1.3.0", default-features = false, features = [ "console_appender", "file_appender", "pattern_encoder", "config_parsing", "json_format" ] }

# Serialization and deserialization
image = { version = "0.25.1", default-features = false, features = [ "rayon", "png" ] }

# ECS
bevy_ecs = "0.13.2"

# Error handling
anyhow = "1.0.82"
thiserror = "1.0.59"

# Parallelism and async
rayon = "1.10.0"
pollster = "0.3.0"

# Utilities
bytemuck = { version = "1.15.0", features = [ "derive" ] }