[package]
name = "voxel-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Window
winit = { version = "0.30.0", default-features = false, features = [ "rwh_06", "x11" ] }

# Rendering
wgpu = { version = "0.20.0", default-features = false, features = [ "dx12", "wgsl" ] }

# GUI
imgui = { path = "./imgui-rs/imgui" }
imgui-wgpu = { path = "./imgui-wgpu" }
imgui-winit-support = { path = "./imgui-rs/imgui-winit-support" }

# Math
nalgebra = "0.32.5"
fastnoise-lite = "1.1.1"
rand = "0.8.5"

# Logging
log = "0.4.21"
log4rs = { version = "1.3.0", default-features = false, features = [ "console_appender", "file_appender", "pattern_encoder", "config_parsing", "yaml_format" ] }

# Serialization and deserialization
image = { version = "0.25.1", default-features = false, features = [ "rayon", "png" ] }
serde = { version = "1.0.139", features = [ "derive" ] }
serde_yml = "0.0.7"
ron = "0.8.1"

# ECS
bevy_ecs = "0.13.2"

# Error handling
anyhow = "1.0.82"
thiserror = "1.0.59"

# Parallelism and async
rayon = "1.10.0"
pollster = { version = "0.3.0", features = [ "macro" ] }

# Data structures
bitvec = "1.0.1"

# Utilities
bytemuck = { version = "1.15.0", features = [ "derive" ] }
enum_dispatch = "0.3.13"