[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
voxel-engine = { path = "../engine" }
anyhow = "1.0.86"
bevy_ecs = "0.13.2"
log = "0.4.21"
nalgebra = "0.32.5"
fastnoise-lite = "1.1.1"
rand = "0.8.5"